--- a/assets/views/blocks/switcher.jet.html
+++ b/assets/views/blocks/switcher.jet.html
@@ -1,7 +1,7 @@
 {{- block Switcher(baseURL, paths, names, currentPath="artworks") }}
     {{- range i, k := paths }}
-        <button href="{{ baseURL }}{{k}}" class="btn btn-primary" selected="{{ currentPath == k ? 1 : 0}}">
+        <a href="{{ baseURL }}{{k}}" class="btn btn-outline-primary btn-sm me-1 mb-2" selected="{{ currentPath == k ? 1 : 0}}">
         {{- names[i] }}
-        </button>
+        </a>
     {{- end }}
 {{- end }}
