add comments to pagination.jet.html

--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -169,7 +169,7 @@
     {{- end }}
 
     <!-- Main Works -->
-    <h2 class="h3 fw-bold mb-3">Works</h2>
+    <h2 class="h3 fw-bold mb-3" id="checkpoint">Works</h2>
     <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4 mb-4">
         {{- include "fragments/small-tn" .Data.Artworks.Artworks }}
     </div>
