--- a/assets/views/blocks/pagination.jet.html
+++ b/assets/views/blocks/pagination.jet.html
@@ -1,12 +1,15 @@
 {{- block pagination(data) }}
+<!-- Pagination navigation block -->
 <nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center">
+  <ul class="pagination justify-content-center mb-0">
+    <!-- Previous page button -->
     {{ if data.HasPrevious }}
-      <li class="page-item"><a class="page-link" href="{{ data.PreviousURL }}">&laquo; Previous</a></li>
+      <li class="page-item"><a class="page-link" href="{{ data.PreviousURL }}">Previous</a></li>
     {{ else }}
-      <li class="page-item disabled"><span class="page-link">&laquo; Previous</span></li>
+      <li class="page-item disabled"><span class="page-link">Previous</span></li>
     {{ end }}
 
+    <!-- First page and ellipsis (if needed) -->
     {{ if data.Pages[0].Number > 1 }}
       <li class="page-item"><a class="page-link" href="{{ data.FirstURL }}">1</a></li>
       {{ if data.Pages[0].Number > 2 }}
@@ -14,6 +17,7 @@
       {{ end }}
     {{ end }}
 
+    <!-- Page numbers -->
     {{ range data.Pages }}
       {{ if .Number == data.CurrentPage }}
         <li class="page-item active"><span class="page-link">{{ .Number }}</span></li>
@@ -22,6 +26,7 @@
       {{ end }}
     {{ end }}
 
+    <!-- Last page and ellipsis (if needed) -->
     {{ if data.HasMaxPage }}
       {{ if data.LastPage < data.MaxPage }}
         {{ if data.LastPage < data.MaxPage - 1 }}
@@ -31,10 +36,11 @@
       {{ end }}
     {{ end }}
 
+    <!-- Next page button -->
     {{ if data.HasNext }}
-      <li class="page-item"><a class="page-link" href="{{ data.NextURL }}">Next &raquo;</a></li>
+      <li class="page-item"><a class="page-link" href="{{ data.NextURL }}">Next</a></li>
     {{ else }}
-      <li class="page-item disabled"><span class="page-link">Next &raquo;</span></li>
+      <li class="page-item disabled"><span class="page-link">Nex;</span></li>
     {{ end }}
   </ul>
 </nav>
