--- a/assets/views/blocks/switcher.jet.html
+++ b/assets/views/blocks/switcher.jet.html
@@ -1,6 +1,6 @@
-{{- block Switcher(baseURL, paths, names, currentPath="artworks") }}
+{{- block Switcher(baseURL, paths, names, activeState) }}
     {{- range i, k := paths }}
-        <a href="{{ baseURL }}{{k}}" class="btn btn-outline-primary{{ currentPath == k ? " active" : "" }} btn-sm me-1 mb-2" role="button" aria-pressed="{{ currentPath == k ? "true" : "false" }}">
+        <a href="{{ baseURL }}{{k}}" class="btn btn-outline-primary{{ activeState == k ? " active" : "" }} btn-sm me-1 mb-2" role="button" aria-pressed="{{ activeState == k ? "true" : "false" }}">
         {{- names[i] }}
         </a>
     {{- end }}
