--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -8,7 +8,7 @@
 
   <!-- Recent works by artist -->
   <div class="card mb-4">
-    <div class="card-header px-4 py-3">
+    <div class="card-header px-3 py-3">
       <div class="d-flex justify-content-between align-items-center">
         <a class="text-decoration-none text-light d-flex align-items-center" href="/users/{{ .Illust.User.ID }}">
           <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-2" style="width: 40px; height: 40px;">
@@ -40,7 +40,7 @@
 
   <!-- mb-5 for spacing between the end of the comments section card and related works -->
   <div class="card mb-5">
-    <div class="card-header px-4 py-3">
+    <div class="card-header px-3 py-3">
         <!-- TODO: clean this logic up -->
         {{- if .Illust.Comments == 0 }}
         <h2 class="h5 fw-bold p-0 mb-0">0 Comments</h2>
@@ -50,7 +50,8 @@
         <h2 class="h5 fw-bold p-0 mb-0">{{ .Illust.Comments }} Comments</h2>
         {{- end }}
     </div>
-    <div class="card-body p-4 pb-0">
+    <!-- The padding disparity with the card-header is intentional -->
+    <div class="card-body p-4">
       {{- if .Illust.CommentDisabled == 1 }}
       <p class="mb-4">The creator turned comments off</p>
       {{- else if .Illust.Comments == 0 }}
@@ -99,7 +100,7 @@
         {{- end }}
         <div class="d-flex justify-content-center">
             <!-- TODO: figure out how to hide the parent div instead of applying mb-4 to the button itself -->
-            <button type="button" class="btn btn-outline-primary mb-4" id="load-more-btn">Load more</button>
+            <button type="button" class="btn btn-outline-primary" id="load-more-btn">Load more</button>
         </div>
       </div>
       {{ end }}
