--- a/assets/views/index.jet.html
+++ b/assets/views/index.jet.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="card mb-4">
-    <div class="card-header px-3 py-3">
+    <div class="card-header p-3">
       <div class="d-flex justify-content-between align-items-center">
         <h2 class="h4 fw-bold mb-0">Today's illustration rankings</h2>
         <a href="/ranking?content=all" class="btn btn-sm btn-outline-primary">See more</a>
@@ -23,7 +23,7 @@
 
   {{- else }}
   <div class="card mb-4">
-    <div class="card-header px-3 py-3">
+    <div class="card-header p-3">
       <h2 class="h4 fw-bold mb-0">Filter</h2>
     </div>
     <div class="card-body p-3">
@@ -35,7 +35,7 @@
   </div>
 
   <div class="card mb-4">
-    <div class="card-header px-3 py-3">
+    <div class="card-header p-3">
       <div class="d-flex justify-content-between align-items-center">
         <h2 class="h4 fw-bold mb-0">Newest works by users you follow</h2>
         <a href="/self/followingWorks" class="btn btn-sm btn-outline-primary">See more</a>
@@ -49,7 +49,7 @@
   </div>
 
   <div class="card mb-4">
-    <div class="card-header px-3 py-3">
+    <div class="card-header p-3">
       <h2 class="h4 fw-bold mb-0">Recommended works</h2>
     </div>
     <div class="card-body p-3">
@@ -61,7 +61,7 @@
 
   {{- range .Data.RecommendByTags }}
   <div class="card mb-4">
-    <div class="card-header px-3 py-3">
+    <div class="card-header p-3">
       <h2 class="h4 fw-bold mb-0">Recommended illustrations tagged <a href="/tags/{{.Name}}" class="text-decoration-none">#{{.Name}}</a></h2>
     </div>
     <div class="card-body p-3">
