--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -56,7 +56,7 @@
     {{- SearchMode := isset(.Queries.smode) ? .Queries.smode : "" }}
 
     <div class="card mb-5">
-        <div class="card-header px-3 py-3">
+        <div class="card-header p-3">
             <h3 class="h4 fw-bold p-0 mb-0">Search settings</h3>
         </div>
         <div class="card-body p-4">
