offcanvas bold headings

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -66,6 +66,7 @@
           <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header d-flex align-items-start">
                 <div class="d-flex flex-column w-75">
+                  <!-- TODO: fw-bold for the title? can't decide -->
                   <h2 class="display-6 offcanvas-title mb-0" id="offcanvasNavbarLabel">PixivFE</h2>
                   <span class="h6 text-muted mb-0">A privacy-respecting alternative front-end for Pixiv that doesn't suck.</span>
                 </div>
@@ -75,7 +76,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav me-auto">
               <div class="mb-4">
-                  <h3 class="h5">Explore</h3>
+                  <h3 class="h5 fw-bold">Explore</h3>
                 <li class="nav-item">
                   <a class="nav-link" href="/discovery"><i class="bi bi-compass" title="compass"></i> Discovery</a>
                 </li>
@@ -90,7 +91,7 @@
                 </li>
               </div>
               <div class="mb-4">
-              <h3 class="h5">Your profile</h3>
+              <h3 class="h5 fw-bold">Your profile</h3>
                 <li class="nav-item">
                   <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people" title="users"></i> Latest works by followed</a>
                 </li>
@@ -102,7 +103,7 @@
                 </li>
               </div>
               <div class="mb-4">
-              <h3 class="h5">Settings & info</h3>
+              <h3 class="h5 fw-bold">Settings & info</h3>
                 <li class="nav-item">
                   <a class="nav-link" href="/settings"><i class="bi bi-gear" title="settings"></i> Settings</a>
                 </li>
