--- a/assets/views/index.jet.html
+++ b/assets/views/index.jet.html
@@ -25,23 +25,35 @@
     {{- else }}
 
     <!-- Landing page if user is logged in -->
-    <div class="col-sm-12 col-md-9">
+    <div class="col-sm-12 col-md-9 mb-5">
+        <!-- Recommended works from followed users -->
+        <!-- TODO: maybe hide this card completely when empty (i.e. no users followed)? -->
         <div class="card mb-4">
             <div class="card-header p-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <h2 class="h4 fw-bold mb-0">Newest works by users you follow</h2>
-                <a href="/self/followingWorks" class="btn btn-sm btn-outline-primary">See more</a>
-            </div>
-            </div>
-            <div class="card-body p-3">
-            <div class="row flex-nowrap overflow-auto">
-                {{- include "fragments/small-tn" .Data.Following }}
-            </div>
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2 class="h4 fw-bold mb-0">Newest works by users you follow</h2>
+                    <a href="/self/followingWorks" class="btn btn-sm btn-outline-primary">See more</a>
+                </div>
+                </div>
+                <div class="card-body p-3">
+                    <div class="row flex-nowrap overflow-auto">
+                        {{- include "fragments/small-tn" .Data.Following }}
+                    </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-12">
+        <!-- Recommended works (without a specific tag) -->
+        <div class="card mb-4">
+            <div class="card-header p-3">
+                <h2 class="h4 fw-bold mb-0">Recommended works</h2>
+            </div>
+            <div class="card-body p-3">
+                <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
+                    {{- include "fragments/small-tn" .Data.Recommended }}
+                </div>
+            </div>
+        </div>
+
         <!-- Filter settings -->
         <div class="card mb-4">
             <div class="card-header p-3">
@@ -52,32 +64,18 @@
                 <a href="/?mode=r18" class="btn btn-outline-danger" role="button" >R-18</a>
             </div>
         </div>
+    </div>
 
-        <div class="card mb-4">
-            <div class="card-header p-3">
-            <h2 class="h4 fw-bold mb-0">Recommended works</h2>
-            </div>
-            <div class="card-body p-3">
-            <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
-                {{- include "fragments/small-tn" .Data.Recommended }}
-            </div>
-            </div>
-        </div>
-
+    <!-- Recommended works (with a specific tag) -->
+    <div class="col-12">
         {{- range .Data.RecommendByTags }}
-        <div class="card mb-4">
-            <div class="card-header p-3">
-            <h2 class="h4 fw-bold mb-0">Recommended illustrations tagged <a href="/tags/{{.Name}}" class="text-decoration-none">#{{.Name}}</a></h2>
-            </div>
-            <div class="card-body p-3">
-            <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
+            <h2 class="h4 fw-bold mb-4">Recommended illustrations tagged <a href="/tags/{{.Name}}" class="text-decoration-none">#{{.Name}}</a></h2>
+            <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4 mb-5">
                 {{- include "fragments/small-tn" .Artworks }}
             </div>
-            </div>
-        </div>
         {{- end }}
+    </div>
 
 {{- end }}
-</div>
 </div>
 {{- end }}
