--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -101,7 +101,7 @@
         {{- end }}
         <div class="d-flex justify-content-center">
             <!-- TODO: figure out how to hide the parent div instead of applying mb-4 to the button itself -->
-            <button type="button" class="btn btn-outline-primary" id="load-more-btn">Load more</button>
+            <button type="button" class="btn btn-outline-primary mb-4" id="load-more-btn">Load more</button>
         </div>
       </div>
       {{ end }}
