--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -1,48 +1,55 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="container">
-<h1 class="mt-4">About PixivFE</h1>
+<div class="row justify-content-center mb-5">
+    <div class="col-sm-12 col-md-9">
+        <div class="card mb-4">
+        <div class="card-header p-3">
+            <h1 class="h4 fw-bold p-0 mb-0">About PixivFE</h1>
+        </div>
+        <div class="card-body p-3">
+            <p class="card-text">PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
+            <p class="card-text">This instance is hosted by the owner of <span class="fw-bold">{{ .DomainName }}</span>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
+        </div>
+    </div>
 
-<div class="card">
-<div class="card-body">
-    <p class="card-text">PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
-    <p class="card-text">This instance is hosted by the owner of <strong>{{ .DomainName }}</strong>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}" class="link-primary">the source repository</a> for more information.</p>
-</div>
-</div>
+    <div class="card mb-4">
+    <div class="card-header p-3">
+        <h2 class="h5 fw-bold p-0 mb-0">Server Information</h2>
+    </div>
+    <div class="list-group list-group-flush">
+    <div class="list-group-item p-3">
+        <h3 class="h6 fw-bold">Version</h3>
+        <p><code class="bg-dark-subtle rounded p-1">{{ .Version }}</code></p>
+        <p class="text-muted mb-0">The current version of PixivFE running on this server</p>
+    </div>
 
-<h2 class="mt-4">Server Information</h2>
-<div class="list-group">
-<div class="list-group-item">
-    <h5>Version</h5>
-    <p>{{ .Version }}</p>
-    <small class="text-muted">The current version of PixivFE running on this server</small>
-</div>
+    {{- if .Revision != "" }}
+    <div class="list-group-item p-3">
+        <h3 class="h6 fw-bold">Revision</h3>
+        <p><code class="bg-dark-subtle rounded p-1"><a href="{{ .RepoURL }}/commit/{{ .RevisionHash }}" class="text-reset">{{ .Revision }}</a></code></p>
+        <p class="text-muted mb-0">The specific revision of PixivFE source code in use</p>
+    </div>
+    {{- end }}
 
-{{- if .Revision != "" }}
-<div class="list-group-item">
-    <h5>Revision</h5>
-    <p><a href="{{ .RepoURL }}/commit/{{ .RevisionHash }}" class="link-primary">{{ .Revision }}</a></p>
-    <small class="text-muted">The specific revision of PixivFE source code in use</small>
-</div>
-{{- end }}
+    <div class="list-group-item p-3">
+        <h3 class="h6 fw-bold">Server start time (UTC)</h3>
+        <p><code class="bg-dark-subtle rounded p-1">{{ .Time }}</code></p>
+        <p class="text-muted mb-0">The date and time when PixivFE was last started on this server</p>
+    </div>
 
-<div class="list-group-item">
-    <h5>Server start time (UTC)</h5>
-    <p>{{ .Time }}</p>
-    <small class="text-muted">The date and time when PixivFE was last started on this server</small>
-</div>
+    <div class="list-group-item p-3">
+        <h3 class="h6 fw-bold">Default image proxy server</h3>
+        <p><code class="bg-dark-subtle rounded p-1">{{ .ImageProxy }}</code></p>
+        <p class="text-muted mb-0">The image proxy server used to retrieve images from i.pximg.net</p>
+    </div>
 
-<div class="list-group-item">
-    <h5>Default image proxy server</h5>
-    <p>{{ .ImageProxy }}</p>
-    <small class="text-muted">The image proxy server used to retrieve images from i.pximg.net</small>
-</div>
-
-<div class="list-group-item">
-    <h5>Accept-Language header</h5>
-    <p>{{ .AcceptLanguage }}</p>
-    <small class="text-muted">The preferred natural language and locale when making requests to the Pixiv API</small>
-</div>
-</div>
+    <div class="list-group-item p-3">
+        <h3 class="h6 fw-bold">Accept-Language header</h3>
+        <p><code class="bg-dark-subtle rounded p-1">{{ .AcceptLanguage }}</code></p>
+        <p class="text-muted mb-0">The preferred natural language and locale when making requests to the Pixiv API</p>
+    </div>
+    </div>
+    </div>
+    </div>
 </div>
 {{- end }}
