--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -2,14 +2,11 @@
 {{- block body() }}
 <div class="row justify-content-center mb-5">
     <div class="col-sm-12 col-md-9">
-        <div class="card mb-4">
-        <div class="card-header p-3">
-            <h1 class="h4 fw-bold p-0 mb-0">About PixivFE</h1>
-        </div>
-        <div class="card-body p-3">
-            <p class="card-text">PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
-            <p class="card-text">This instance is hosted by the owner of <span class="fw-bold">{{ .DomainName }}</span>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
-        </div>
+
+    <div class="mb-4">
+        <h1 class="h4 fw-bold mb-3">About PixivFE</h1>
+        <p>PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
+        <p>This instance is hosted by the owner of <span class="fw-bold">{{ .DomainName }}</span>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
     </div>
 
     <div class="card mb-4">
