--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -2,11 +2,8 @@
 {{- block body() }}
   <div class="row justify-content-center mb-5">
     <div class="col-12 col-lg-9">
-      <div class="card mb-4">
-        <div class="card-header px-4 py-3">
-            <h1 class="h4 fw-bold p-0 mb-0">Settings</h1>
-        </div>
-        <div class="card-body p-4">
+        <div class="mb-4">
+            <h1 class="h4 fw-bold mb-3">Settings</h1>
             <p class="card-text">PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your preferences, which you can change on this page to customize your experience on this instance.</p>
             <div class="row">
                 <div class="col-12 col-lg-3 mb-3 mb-lg-0">
@@ -20,6 +17,12 @@
                         </li>
                         <li class="nav-item" role="presentation">
                         <button class="nav-link" id="novels-tab" data-bs-toggle="tab" data-bs-target="#novels" type="button" role="tab" aria-controls="novels" aria-selected="false">Novels</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="cookie-values-tab" data-bs-toggle="tab" data-bs-target="#cookie-values" type="button" role="tab" aria-controls="cookie-values" aria-selected="false">Cookie Values</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="raw-settings-tab" data-bs-toggle="tab" data-bs-target="#raw-settings" type="button" role="tab" aria-controls="raw-settings" aria-selected="false">Raw Settings</button>
                         </li>
                     </ul>
                 </div>
@@ -240,64 +243,55 @@
                             </li>
                           </ul>
                         </div>
+
+                        <!-- Cookie Values Tab -->
+                        <div class="tab-pane fade" id="cookie-values" role="tabpanel" aria-labelledby="cookie-values-tab">
+                          <h2 class="h5 fw-bold mb-3">Current cookie values</h2>
+                          <p class="mb-4">
+                            Please note that some cookies here such as ShowArtR18,
+                            ShowArtR18G, and ShowArtAI are for features still under development.
+                          </p>
+                          {{- range k, v := CookieList }}
+                          <div class="mb-3">
+                            <h3 class="h6 fw-bold">{{k}}</h3>
+                            <form action="/settings/set-cookie" method="post" class="row g-2">
+                              <div class="col-auto">
+                                <input type="hidden" name="key" value="{{k}}" />
+                                <input type="text" class="form-control" name="value" value="{{v}}" />
+                              </div>
+                              <div class="col-auto">
+                                <button type="submit" class="btn btn-primary">Set</button>
+                              </div>
+                            </form>
+                          </div>
+                          {{- end }}
+                        </div>
+
+                        <!-- Raw Settings Tab -->
+                        <div class="tab-pane fade" id="raw-settings" role="tabpanel" aria-labelledby="raw-settings-tab">
+                          <h2 class="h5 fw-bold mb-3">Raw settings</h2>
+                          <p>
+                            You can save your current cookie values to quickly set your settings on other compatible instances,
+                            or if the current instance's cookies went expired.
+                          </p>
+                          <p>Invalid values will be ignored.</p>
+                          <!-- Save raw settings -->
+                          <form action="/settings/raw" method="post">
+                            <div class="mb-3">
+                              <textarea class="form-control" name="raw" rows="10">{{range k, v := CookieList}}&#10;{{k}}={{v}}{{end}}
+                              </textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Set raw settings</button>
+                          </form>
+                          <!-- Reset all -->
+                          <form action="/settings/reset-all" method="post" class="mt-3">
+                            <button type="submit" class="btn btn-danger">Reset all cookies/preferences</button>
+                          </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
-
-      <!-- Current cookie values -->
-      <div class="card mb-4">
-        <div class="card-header p-3">
-          <h2 class="h5 fw-bold mb-0">Current cookie values</h2>
-        </div>
-        <div class="card-body p-4">
-          <p class="mb-4">
-            Please note that some cookies here such as ShowArtR18,
-            ShowArtR18G, and ShowArtAI are for features still under development.
-          </p>
-          {{- range k, v := CookieList }}
-          <div class="mb-3">
-            <h3 class="h6 fw-bold">{{k}}</h3>
-            <form action="/settings/set-cookie" method="post" class="row g-2">
-              <div class="col-auto">
-                <input type="hidden" name="key" value="{{k}}" />
-                <input type="text" class="form-control" name="value" value="{{v}}" />
-              </div>
-              <div class="col-auto">
-                <button type="submit" class="btn btn-primary">Set</button>
-              </div>
-            </form>
-          </div>
-          {{- end }}
-        </div>
-      </div>
-
-      <!-- Raw settings -->
-      <div class="card mb-4">
-        <div class="card-header p-3">
-          <h2 class="h5 fw-bold mb-0">Raw settings</h2>
-        </div>
-        <div class="card-body p-4">
-          <p>
-            You can save your current cookie values to quickly set your settings on other compatible instances,
-            or if the current instance's cookies went expired.
-          </p>
-          <p>Invalid values will be ignored.</p>
-          <!-- Save raw settings -->
-          <form action="/settings/raw" method="post">
-            <div class="mb-3">
-              <textarea class="form-control" name="raw" rows="10">{{range k, v := CookieList}}&#10;{{k}}={{v}}{{end}}
-              </textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Set raw settings</button>
-          </form>
-          <!-- Reset all -->
-          <form action="/settings/reset-all" method="post">
-            <button type="submit" class="btn btn-danger">Reset all cookies/preferences</button>
-          </form>
-        </div>
-      </div>
     </div>
   </div>
 {{- end }}
